[package]
name = "unleash-edge-client-api"
version = "20.0.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-edge-appstate = { path = "../unleash-edge-appstate" }
unleash-edge-delta = { path = "../unleash-edge-delta" }
unleash-edge-feature-filters = { path = "../unleash-edge-feature-filters" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-metrics = { path = "../unleash-edge-metrics" }
unleash-edge-streaming = { path = "../unleash-edge-streaming" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
maplit = { workspace = true }
tracing-test = { workspace = true }
