[package]
name = "unleash-edge-client-api"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-edge-appstate = { workspace = true }
unleash-edge-delta = { workspace = true }
unleash-edge-feature-filters = { workspace = true }
unleash-edge-feature-refresh = { workspace = true }
unleash-edge-metrics = { workspace = true }
unleash-edge-streaming = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
maplit = { workspace = true }
tracing-test = { workspace = true }
