[package]
name = "unleash-edge-feature-cache"
version = "20.0.0"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
dashmap = { workspace = true }
tokio = { workspace = true }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
