[package]
name = "unleash-edge-feature-cache"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = true
[dependencies]
dashmap = { workspace = true }
tokio = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }
