[package]
name = "unleash-edge-feature-filters"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
dashmap = { workspace = true }
tracing = { workspace = true }
unleash-types = { workspace = true }
unleash-edge-delta = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
