[package]
name = "unleash-edge-feature-refresh"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
etag = { workspace = true }
eventsource-client = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
json-structural-diff = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-types = { workspace = true }
unleash-edge-delta = { path = "../unleash-edge-delta" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-filters = { path = "../unleash-edge-feature-filters" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-yggdrasil = { workspace = true}

[dev-dependencies]
axum-test = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }