[package]
name = "unleash-edge-frontend-api"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = true
license.workspace = true

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-edge-appstate = { workspace = true }
unleash-edge-feature-filters = { workspace = true }
unleash-edge-feature-refresh = { workspace = true }
unleash-edge-metrics = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
utoipa = { workspace = true }
[dev-dependencies]
axum-test = { workspace = true }
tower = { workspace = true }
