[package]
name = "unleash-edge-integration-tests"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
etag = { workspace = true }
serde = { workspace = true }
serde_json = {  workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-edge-appstate = { path = "../unleash-edge-appstate" }
unleash-edge-auth = { path = "../unleash-edge-auth" }
unleash-edge-client-api = { path = "../unleash-edge-client-api" }
unleash-edge-delta = { path = "../unleash-edge-delta" }
unleash-edge-edge-api = { path = "../unleash-edge-edge-api" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-filters = { path = "../unleash-edge-feature-filters"}
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
