[package]
name = "unleash-edge-integration-tests"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
license.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
etag = { workspace = true }
futures = { workspace = true }
eventsource-stream = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-edge-appstate = { workspace = true }
unleash-edge-auth = { workspace = true }
unleash-edge-client-api = { workspace = true }
unleash-edge-delta = { workspace = true }
unleash-edge-edge-api = { workspace = true }
unleash-edge-feature-cache = { workspace = true }
unleash-edge-feature-filters = { workspace = true }
unleash-edge-feature-refresh = { workspace = true }
unleash-edge-http-client = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
pretty_assertions = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
