[package]
name = "unleash-edge-metrics"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
itertools = {workspace = true}
lazy_static = { workspace = true }
prometheus = { workspace = true }
prometheus-reqwest-remote-write = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-types = { workspace = true }
unleash-edge-types = { path = "../unleash-edge-types" }

[dev-dependencies]
proptest = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }