[package]
name = "unleash-edge-metrics"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
prometheus-reqwest-remote-write = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-types = { workspace = true }
unleash-edge-http-client = { workspace = true }
unleash-edge-types = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
proptest = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
