[package]
name = "unleash-edge-offline"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
tracing-test = { workspace = true }