[package]
name = "unleash-edge-persistence"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["s3-persistence"]
s3-persistence = ["aws-sdk-s3", "aws-config"]


[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
chrono = { workspace = true }
dashmap = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }