[package]
name = "unleash-edge-streaming"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
publish = false
[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
unleash-edge-delta = { workspace = true }
unleash-edge-feature-cache = { workspace = true }
unleash-edge-feature-filters = { workspace = true }
unleash-edge-feature-refresh = { workspace = true }
unleash-edge-http-client = { workspace = true }
unleash-edge-persistence = { workspace = true }
unleash-edge-types = { workspace = true }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }

[dev-dependencies]
axum-test = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
