[package]
name = "unleash-edge-types"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
etag = { workspace = true }
http = { workspace = true }
prometheus = { workspace = true }
redis = { workspace = true }
reqwest = {  workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shadow-rs = { workspace = true }
tracing = { workspace = true }
ulid = { workspace = true }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
test-case = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }