[package]
name = "unleash-edge"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
unleash-edge-appstate = { path = "../unleash-edge-appstate" }
unleash-edge-backstage = { path = "../unleash-edge-backstage" }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-client-api = { path = "../unleash-edge-client-api" }
unleash-edge-edge-api = { path = "../unleash-edge-edge-api" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-frontend-api = { path = "../unleash-edge-frontend-api" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum-test = {workspace = true}