[package]
name = "unleash-edge"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[features]
default = ["s3-persistence"]
s3-persistence = ["aws-sdk-s3", "aws-config"]


[dependencies]
anyhow = { workspace = true }
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
dashmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
unleash-edge-appstate = { path = "../unleash-edge-appstate" }
unleash-edge-auth = { path = "../unleash-edge-auth" }
unleash-edge-backstage = { path = "../unleash-edge-backstage" }
unleash-edge-cli = { path = "../unleash-edge-cli" }
unleash-edge-client-api = { path = "../unleash-edge-client-api" }
unleash-edge-delta = { path = "../unleash-edge-delta" }
unleash-edge-edge-api = { path = "../unleash-edge-edge-api" }
unleash-edge-feature-cache = { path = "../unleash-edge-feature-cache" }
unleash-edge-feature-refresh = { path = "../unleash-edge-feature-refresh" }
unleash-edge-frontend-api = { path = "../unleash-edge-frontend-api" }
unleash-edge-http-client = { path = "../unleash-edge-http-client" }
unleash-edge-offline = { path = "../unleash-edge-offline" }
unleash-edge-persistence = { path = "../unleash-edge-persistence" }
unleash-edge-types = { path = "../unleash-edge-types" }
unleash-types = { workspace = true }
unleash-yggdrasil = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
axum-test = {workspace = true}